--- a/rust/perspective-viewer/src/less/viewer.less
+++ b/rust/perspective-viewer/src/less/viewer.less
@@ -74,6 +74,7 @@
         width: 100%;
 
         #plugin_selector_container {
+            margin-right: 6px;
             min-height: 29px;
             margin-left: var(--column_selector--width, 20px);
             overflow: hidden;
