--- a/rust/perspective-viewer/src/themes/material-dense.less
+++ b/rust/perspective-viewer/src/themes/material-dense.less
@@ -11,10 +11,10 @@
 @import (reference) "material";
 
 .perspective-viewer-material-dense-base {
-    --side_panel--padding: 12px 4px 12px 8px;
+    --side_panel--padding: 12px 0px 6px 8px;
     --top_panel--padding: 0px 0px 12px 0px;
     --column-drop-label--margin: -10px 0px 0px 0px;
-    --settings-button--padding: 15px 8px;
+    --settings-button--padding: 15px 8px 6px 8px;
     --column-drop-label--font-size: 8px;
     --column_selector--width: 24px;
 }
